Actualizo notebook Limpieza_de_datos con últimas modificaciones

--- a/mlops-project/notebooks/Limpieza_de_datos.ipynb
+++ b/mlops-project/notebooks/Limpieza_de_datos.ipynb
@@ -20,7 +20,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\oscar\\mlops-project\\mlops-project\\notebooks\n"
+          ]
+        }
+      ],
+      "source": [
+        "import os\n",
+        "\n",
+        "print(os.getcwd())\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
       "metadata": {
         "id": "gMGjf3GxUWir"
       },
@@ -42,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 18,
       "metadata": {
         "id": "YenSruzbUsZ7"
       },
@@ -97,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 19,
       "metadata": {
         "id": "yYVh8MFyVe0D"
       },
@@ -128,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 20,
       "metadata": {
         "id": "F86PEu-fVubT"
       },
@@ -185,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 21,
       "metadata": {
         "id": "HC5tGq9EWkSS"
       },
@@ -219,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 22,
       "metadata": {
         "id": "-TW2y80QXbvk"
       },
@@ -244,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 23,
       "metadata": {
         "id": "iYBxFbgg0888"
       },
@@ -274,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -348,31 +368,10 @@
             "🟡 Columna 'abs_title_sentiment_polarity' (sesgo=1.74) -> Imputada con la MEDIANA (0.00).\n",
             "🟡 Columna 'shares' (sesgo=4.80) -> Imputada con la MEDIANA (1400.00).\n"
           ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\oscar\\AppData\\Local\\Temp\\ipykernel_64764\\1994438103.py:10: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  mod[columna].fillna(valor_imputacion, inplace=True)\n",
-            "C:\\Users\\oscar\\AppData\\Local\\Temp\\ipykernel_64764\\1994438103.py:17: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  mod[columna].fillna(valor_imputacion, inplace=True)\n"
-          ]
         }
       ],
       "source": [
         "for columna in mod.columns[1:]:\n",
-        "\n",
         "    # Se calcula el sesgo (skewness) de la columna actual\n",
         "    sesgo = mod[columna].skew()\n",
         "\n",
@@ -380,15 +379,16 @@
         "    if -1 < sesgo < 1:\n",
         "        # Se imputan los valores faltantes con la MEDIA\n",
         "        valor_imputacion = mod[columna].mean()\n",
-        "        mod[columna].fillna(valor_imputacion, inplace=True)\n",
+        "        mod[columna] = mod[columna].fillna(valor_imputacion)\n",
         "        print(f\"✅ Columna '{columna}' (sesgo={sesgo:.2f}) -> Imputada con la MEDIA ({valor_imputacion:.2f}).\")\n",
         "\n",
         "    # Si el sesgo es mayor a 1 o menor a -1 (distribución sesgada)\n",
         "    else:\n",
         "        # Se imputan los valores faltantes con la MEDIANA\n",
         "        valor_imputacion = mod[columna].median()\n",
-        "        mod[columna].fillna(valor_imputacion, inplace=True)\n",
-        "        print(f\"🟡 Columna '{columna}' (sesgo={sesgo:.2f}) -> Imputada con la MEDIANA ({valor_imputacion:.2f}).\")\n"
+        "        mod[columna] = mod[columna].fillna(valor_imputacion)\n",
+        "        print(f\"🟡 Columna '{columna}' (sesgo={sesgo:.2f}) -> Imputada con la MEDIANA ({valor_imputacion:.2f}).\")\n",
+        "\n"
       ]
     },
     {
@@ -402,7 +402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -437,7 +437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -570,7 +570,7 @@
               "num_videos                0.0    26.00    1.334141    0.000000"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -599,7 +599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -912,8 +912,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Informacion del data frame limpio**"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1007,7 +1014,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "base",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
