feat: clase clean_eda creada, refactorizacion preprocesamiento

--- a/notebooks/02_clean_preprocess.ipynb
+++ b/notebooks/02_clean_preprocess.ipynb
@@ -207,7 +207,7 @@
     "# CLASE: NewsPopularityModel\n",
     "# =====================================================================\n",
     "\n",
-    "class DataProcessor:\n",
+    "class NewsPopularityModel:\n",
     "    \"\"\"\n",
     "    Clase principal refactorizada.\n",
     "    \"\"\"\n",
@@ -364,10 +364,16 @@
     "            self.reports_path, \"04_test_set_report.html\"\n",
     "        )\n",
     "\n",
-    "        print(\"\\nDefiniendo el Pipeline de Scikit-Learn...\")\n",
+    "        ##### PIPELINE PREPROCESSING ###\n",
+    "        ###\n",
+    "        ###\n",
+    "\n",
+    "        print(\"\\nDefiniendo el Pipeline de preprocesamiento de Scikit-Learn...\")\n",
     "        \n",
     "        numeric_features = self.X_train.select_dtypes(include=np.number).columns\n",
     "        cols_bin, cols_no_bin = classify_numeric_columns(self.X_train[numeric_features])\n",
+    "\n",
+    "\n",
     "\n",
     "        numeric_non_binary_transformer = Pipeline(steps=[\n",
     "            ('imputer', SimpleImputer(strategy='median')),\n",
@@ -392,6 +398,11 @@
     "        print(\"=\"*30)\n",
     "        print(\"FIN DE PREPROCESAMIENTO Y DEFINICIÓN DE PIPELINE\")\n",
     "        print(\"=\"*30)\n",
+    "\n",
+    "        ###\n",
+    "        ###\n",
+    "        ##### PIPELINE PREPROCESSING ###\n",
+    "\n",
     "\n",
     "        return self"
    ]
